GearsetPOC/force-app/main/default/objects/MJ_Timeslot__c/MJ_Timeslot__c.object-meta.xml
<CustomObject>
    <label>MJ_Timeslot</label>
    <nameField>
        <displayFormat>Timeslot - {DD}{MM}{YY} - {000}</displayFormat>
        <label>MJ_Timeslot_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MJ_Timeslots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>