GearsetPOC/force-app/main/default/objects/MJ_Timeslot__c/fields/MJ_Disruption__c.field-meta.xml
<CustomField>
    <fullName>MJ_Disruption__c</fullName>
    <label>MJ_Disruption</label>
    <referenceTo>MJ_Disruption__c</referenceTo>
    <relationshipLabel>MJ_Timeslots</relationshipLabel>
    <relationshipName>MJ_Timeslots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>