GearsetPOC/force-app/main/default/objects/MJ_Timeslot__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <description>How many people can volunteer for this timeslot</description>
    <inlineHelpText>How many people can volunteer for this timeslot</inlineHelpText>
    <label>Quota</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>