GearsetPOC/force-app/main/default/objects/MJ_Timeslot__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>London St. Pancras</fullName>
            </value>
            <value>
                <fullName>Paris Gare du Nord</fullName>
            </value>
            <value>
                <fullName>Ebbsfleet Int</fullName>
            </value>
            <value>
                <fullName>Ashford Int</fullName>
            </value>
            <value>
                <fullName>Brussels Midi</fullName>
            </value>
            <value>
                <fullName>Lille Europe</fullName>
            </value>
            <value>
                <fullName>Calais</fullName>
            </value>
            <value>
                <fullName>Disneyland</fullName>
            </value>
            <value>
                <fullName>Process Exchanges on Carmen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>